--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "clsx": "^1.1.1",
+    "firebase": "^9.6.10",
+    "formik": "^2.2.9",
     "material-ui-popup-state": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,7 +27,8 @@
     "redux": "^4.1.2",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
