--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.1.2",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
+    "timeago.js": "^4.0.0-beta.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
