--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "clsx": "^1.1.1",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.10",
     "formik": "^2.2.9",
     "material-ui-popup-state": "^2.0.0",
